libcm4all-was (1.15) unstable; urgency=low

  * simple: additional STOP checks in various public functions to fix recovery
  * simple: fix _input_poll() return value after PREMATURE
  * simple: auto-flush after _set_length()
  * enable compiler optimization
  * unit test

 --   

libcm4all-was (1.14) unstable; urgency=low

  * build with Meson and Ninja
  * all code is now covered by the Simplified BSD License (BSD-2-Clause)
  * eliminate libinline dependency
  * require libhttp 1.2.6 (-fPIC)
  * simple: improved recovery after receiving STOP
  * doc: migrate from LaTeX to Sphinx/reStructuredText

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Feb 2019 09:17:29 +0100

libcm4all-was (1.13) unstable; urgency=low

  * simple: fix dying process after discarding request body

 -- Max Kellermann <mk@cm4all.com>  Tue, 20 Jun 2017 11:33:30 -0000

libcm4all-was (1.12) unstable; urgency=low

  * simple: fix poll bugs after receiving STOP
  * examples: new package with example programs
  * debian: require Multi-Arch (Debian Jessie or newer)

 -- Max Kellermann <mk@cm4all.com>  Fri, 16 Jun 2017 21:16:04 -0000

libcm4all-was (1.11) unstable; urgency=low

  * debian: fix the build of package libcm4all-was-protocol-dev

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Jun 2017 08:38:03 -0000

libcm4all-was (1.10) unstable; urgency=low

  * simple: fix double free bug

 -- Max Kellermann <mk@cm4all.com>  Mon, 13 Mar 2017 21:27:06 -0000

libcm4all-was (1.9) unstable; urgency=low

  * simple: fix assertion failure after control send error
  * simple: add _abort()
  * require Debian Jessie or newer

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Feb 2017 17:05:00 -0000

libcm4all-was (1.8) unstable; urgency=low

  * simple: add _output_begin()
  * simple: flush PREMATURE packets
  * simple: handle STOP even after response is finished

 -- Max Kellermann <mk@cm4all.com>  Wed, 16 Nov 2016 14:46:02 -0000

libcm4all-was (1.7) unstable; urgency=low
