@@ -3,6 +3,7 @@ libcm4all-was (1.15) unstable; urgency=low
   * simple: additional STOP checks in various public functions to fix recovery
   * simple: fix _input_poll() return value after PREMATURE
   * simple: auto-flush after _set_length()
+  * simple: additional protocol error checks
   * enable compiler optimization
   * unit test
 
